# timewarp

./: .gitignore  .gitmodulesOld  ENV_SETUP.md  README.md  clear_ports.sh  data_sample (1).json  environment.yml  futuristicWikipedia.html  pyproject.toml  requirements.txt  run_all_env.sh  setup.sh  stop_all_ports.sh  test_output_html.json  test_output_html_v2.json  webArena-wikipedia-tasks.json
Wayback References/: wikipedia-2001-article.html  wikipedia-2002-article.html  wikipedia-2003-article.html  wikipedia-2004-article.html  wikipedia2001-main.html  wikipedia2002-main.html  wikipedia2003-main.html  wikipedia2004-main.html
Wayback References/wikipedia-2001-article_files/: wikistandard.css
Wayback References/wikipedia-2002-article_files/: wikistandard.css
Wayback References/wikipedia2002-main_files/: wikistandard.css
Wayback References/wikipedia2003-main_files/: wikibits.js.download  wikistandard.css
Wikipedia Replica/: assets.json  index.html
collectTeacherTraj/: README.MD  generic_agent_with_training.py  loop.py
data/: check_data.ipynb  data_sample.json
data_annotation/: .env.example  BATCH_COLLECTION_README.md  action_mapper.py  batch_processor.py  collect_batch.sh  collect_sft.py  collect_sft_with_events.py  debug_html.py  debug_trace.py  observation_extractor.py  process_traces.py  requirements.txt  sharegpt_formatter.py  test_html_extraction.py  trace_parser.py
docs/: SEARCH_ALGORITHMS.md
llamafactory/: dataset_info.json  readme.md
scripts/: README.md  startVLMmodel.sh  viewData.ipynb  viewData.py  viewJSON.py
timewarp/: .gitignore
(+396 files in other folders)
