[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "browsergym-timewarp"
description = "TimeWarp benchmark for BrowserGym"
authors = [
    {name = "Md Farhan Ishmam"},
    {name = "Kenneth Marino"},
]
readme = "src/browsergym/README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
]
dynamic = ["dependencies", "version"]

[project.urls]
homepage = "https://timewarp-web.github.io"

[tool.hatch.version]
path = "src/browsergym/timewarp/__init__.py"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.build.targets.wheel]
packages = ["src/browsergym"]

[tool.hatch.build.targets.sdist]
include = [
    "src/browsergym/",
    "requirements.txt",
    "pyproject.toml",
    "README.md",
]
